struttura base 2.0 50%, il codice si rompe se si modifica la grandezza della finestra del browser

--- a/index.html
+++ b/index.html
@@ -25,16 +25,38 @@
             </section>
 
             <section class="jumbotron">
+                <div class="container">
+                    <div class="titolo">
 
+                    </div>
+                    <p class="content">
+
+                    </p>
+                    <div class="img">
+
+                    </div>
+                </div>
             </section>
         </header>
 
         <main>
             <section class="piano_dropbox">
+                <div class="container">
+                    <h2></h2> 
+                    <div class="fatturazione">
 
+                    </div>
+                </div>
             </section>
             <section class="partner_dropbox">
+                <div class="container">
+                    <div class="img">
 
+                    </div>
+                    <div class="content">
+    
+                    </div>
+                </div>
             </section>
             <section class="operazioni_dropbox_business">
 
