inserita parte della prima sezione del main

--- a/index.html
+++ b/index.html
@@ -72,13 +72,17 @@
         </section>
     </header>
 
-    <!-- <main>
+    <main>
             <section class="piano_dropbox">
                 <div class="container">
-                    <h2></h2> 
+                    <h2>Trova il piano Dropbox Business che fa per te</h2> 
                     <div class="fatturazione">
+                        <div class="radio"> 
+                            <div id="pallino"></div><span>Fatturazione mensile</span>
+                            <div id="pallino"></div><span>Fatturazione annuale</span>
+                        </div>
                         <div class="content">
-
+                            
                         </div>
                         <div class="content">
                                 
@@ -92,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- <section class="partner_dropbox">
                 <div class="container">
                     <div class="img">
