aggiunta sezione 2 del main

--- a/index.html
+++ b/index.html
@@ -97,17 +97,21 @@
                     </div>
                 </div>
             </section>
-            <!-- <section class="partner_dropbox">
+            <section class="partner_dropbox">
                 <div class="container">
                     <div class="img">
-
+                        <img src="img/partner.png" alt="Img di due ragazzi che parlano">
                     </div>
                     <div class="content">
-    
+                        <div>
+                            <h3>Entra in contatto con un partner Dropbox</h3>
+                            <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione esupporto continui.</p>
+                            <span class="btn">Trova un partner</span>
+                        </div>
                     </div>
                 </div>
             </section>
-            <section class="operazioni_dropbox_business">
+            <!-- <section class="operazioni_dropbox_business">
                 <div class="container">
                     <h2></h2>
                     <div class="row">
@@ -155,7 +159,7 @@
                     <div class="content"></div>
 
                 </div> 
-            </section>-->
+            </section> -->
         </main>
 
         <!-- <footer>
