Corretti titoli footer

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     </ul>
                 </div>
                 <div class="cln">
-                    <div class="down_title">Dropbox</div>
+                    <div class="down_title">Prodotti</div>
                     <ul>
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
@@ -199,7 +199,7 @@
                     </ul>
                 </div>
                 <div class="cln">
-                    <div class="down_title">Dropbox</div>
+                    <div class="down_title">Azienda</div>
                     <ul>
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
@@ -210,7 +210,7 @@
                     </ul>
                 </div>
                 <div class="cln">
-                    <div class="down_title">Dropbox</div>
+                    <div class="down_title">Supporto</div>
                     <ul>
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
@@ -221,7 +221,7 @@
                     </ul>
                 </div>
                 <div class="cln">
-                    <div class="down_title">Dropbox</div>
+                    <div class="down_title">Community</div>
                     <ul>
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
