aggiunta riga otto le colonne nella sezione fatturazione

--- a/index.html
+++ b/index.html
@@ -146,7 +146,15 @@
                         </div>
 
                         <div class="down">
-                            
+                            <div class="testa">Team</div>
+                            <div class="contenitore">
+                                <div class="contenuto">
+                                    <div>Enterprise</div>
+                                    <div>Contatta l'ufficio vendite per i prezzi</div>
+                                    <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</div>
+                                </div>
+                                <div class="btn">Contatta l'ufficio vendite</div>
+                            </div>
                         </div>
                     </div>
                 </div>
