--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                     <span>Tutto ciò che ti serve per il lavoro, in un unico posto</span>
                 </div>
                 <div class="content">
-                    <div class="a">
                         <div class="content_left">
                             <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                                 posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
@@ -62,8 +61,9 @@
                             <div class="content">Annulla in qualsiasi momento</div>
                             <i class="fas fa-arrow-down"></i>
                         </div>
-
-                        <!-- nserire immagine dx-->
+                        <div class="content_right">
+                            <img src="img/jumbo.png" alt="Img jumbo">
+                        </div>
                     </div>
                     
                 </div>
@@ -79,74 +79,74 @@
                     <h2>Trova il piano Dropbox Business che fa per te</h2> 
                     <div class="fatturazione">
                         <div class="radio"> 
-                            <div id="pallino"></div><span>Fatturazione mensile</span>
-                            <div id="pallino"></div><span>Fatturazione annuale</span>
+                            <div class="pallino blu"></div><span>Fatturazione mensile</span>
+                            <div class="pallino"></div><span>Fatturazione annuale</span>
                         </div>
                         <div class="content">
-                            <div class="testa">Singolo</div>
+                            <div class="testa"> <span> <i class="far fa-user"></i> </span> Singolo</div>
                             <div class="container_interno">
                                 <div>Professional</div>
                                 <div>19,99 &euro;</div>
                                 <div>/mese</div>
-                                <div>1 utente</div>
-                                <div>3 TB di spazio di archiviazione sicuro</div>
-                                <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                <div> <span> <i class="far fa-user"></i> </span> 1 utente</div>
+                                <div> <span> <i class="far fa-folder"></i> </span> 3 TB di spazio di archiviazione sicuro</div>
+                                <div> <span> <i class="fas fa-pencil-alt"></i> </span> Funzioni di produttività premium e condivisione file semplice e sicura</div>
                                 <div class="btn">Prova gratis per 30 giorni</div>
                                 <div>oppure</div> 
                                 <div> <a href="#">acquista ora</a> </div>
                                 <div>Punti salienti del piano</div>
-                                <div>Invia file fino a 100GB con Dropbox Transfert</div>
-                                <div>Cartella offline su dispositivi mobili</div>
-                                <div>Pulizia remota dell'account</div>
-                                <div>Filigrana documento</div>
-                                <div>Assistenza prioritaria via email e chat</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Invia file fino a 100GB con Dropbox Transfert</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Cartella offline su dispositivi mobili</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Pulizia remota dell'account</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Filigrana documento</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Assistenza prioritaria via email e chat</div>
                             </div>
                         </div>
                         <div class="content">
-                            <div class="testa">Team</div>
+                            <div class="testa"> <span> <i class="far fa-building"></i> </span> Team</div>
                             <div class="container_interno">
                                 <div>Standard</div>
                                 <div>19,99 &euro;</div>
                                 <div> / utente / mese, a partire da 3 utenti</div>
-                                <div>1 utente</div>
-                                <div>3 TB di spazio di archiviazione sicuro</div>
-                                <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                <div> <span> <i class="fas fa-user-plus"></i> </span> 1 utente</div>
+                                <div> <span> <i class="far fa-folder"></i> </span> 3 TB di spazio di archiviazione sicuro</div>
+                                <div> <span> <i class="far fa-smile"></i> </span> Funzioni di produttività premium e condivisione file semplice e sicura</div>
                                 <div class="btn">Prova gratis per 30 giorni</div>
                                 <div>oppure</div> 
                                 <div> <a href="#">acquista ora</a> </div>
                                 <div>Punti salienti del piano</div>
-                                <div>Invia file fino a 100GB con Dropbox Transfert</div>
-                                <div>Cartella offline su dispositivi mobili</div>
-                                <div>Pulizia remota dell'account</div>
-                                <div>Filigrana documento</div>
-                                <div>Assistenza prioritaria via email e chat</div>
-                                <div>Assistenza prioritaria via email e chat</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Invia file fino a 100GB con Dropbox Transfert</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Cartella offline su dispositivi mobili</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Pulizia remota dell'account</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Filigrana documento</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Assistenza prioritaria via email e chat</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Assistenza prioritaria via email e chat</div>
                             </div>
                         </div>
                         <div class="content">
-                            <div class="testa">Team</div>
+                            <div class="testa"> <span> <i class="far fa-building"></i> </span> Team</div>
                             <div class="container_interno">
                                 <div>Advanced</div>
                                 <div>19,99 &euro;</div>
                                 <div>/ utente / mese, a partire da 3 utenti</div>
-                                <div>1 utente</div>
-                                <div>3 TB di spazio di archiviazione sicuro</div>
-                                <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                                <div> <span> <i class="fas fa-user-plus"></i> </span> 1 utente</div>
+                                <div> <span> <i class="far fa-smile"></i> </span> 3 TB di spazio di archiviazione sicuro</div>
+                                <div> <span> <i class="fas fa-pencil-alt"></i> </span> Funzioni di produttività premium e condivisione file semplice e sicura</div>
                                 <div class="btn">Prova gratis per 30 giorni</div>
                                 <div>oppure</div> 
                                 <div> <a href="#">acquista ora</a> </div>
                                 <div>Punti salienti del piano</div>
-                                <div>Invia file fino a 100GB con Dropbox Transfert</div>
-                                <div>Cartella offline su dispositivi mobili</div>
-                                <div>Pulizia remota dell'account</div>
-                                <div>Filigrana documento</div>
-                                <div>Assistenza prioritaria via email e chat</div>
-                                <div>Assistenza prioritaria via email e chat</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Invia file fino a 100GB con Dropbox Transfert</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Cartella offline su dispositivi mobili</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Pulizia remota dell'account</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Filigrana documento</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Assistenza prioritaria via email e chat</div>
+                                <div> <span> <i class="fas fa-check check"></i> </span> Assistenza prioritaria via email e chat</div>
                             </div>
                         </div>
 
                         <div class="down">
-                            <div class="testa">Team</div>
+                            <div class="testa"> <span> <i class="far fa-building"></i> </span> Team</div>
                             <div class="contenitore">
                                 <div class="contenuto">
                                     <div>Enterprise</div>
@@ -311,7 +311,7 @@
                 </div>
             </div>
             <div class="down">
-                <div class="lingua">Italiano</div>
+                <div class="lingua"> <span> <i class="fas fa-globe-americas"></i> </span> Italiano</div>
             </div>
         </footer>
 
