--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
                                 posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
                                 e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                            <span class="btn">Inizia la tua prova gratuita</span>
+                            <span class="btn"> <a href="#"> Inizia la tua prova gratuita </a> </span>
                             <div class="content">Annulla in qualsiasi momento</div>
                             <i class="fas fa-arrow-down"></i>
                         </div>
@@ -285,7 +285,6 @@
                         <span class="domanda">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span> 
                         <span class="freccia_bassa"><i class="fas fa-chevron-down"></i></span>
                     </div>
-                   
             </section>
 
         </main>
@@ -349,7 +348,11 @@
                 </div>
             </div>
             <div class="down">
-                <div class="lingua"> <span> <i class="fas fa-globe-americas"></i> </span> Italiano</div>
+                <div class="lingua"> 
+                    <span> <i class="fas fa-globe-americas"></i> </span> 
+                    <span>Italiano</span> 
+                    <span><i class="fas fa-sort-up"></i></span>
+                </div>
             </div>
         </footer>
 
