fix freccia jumbotron

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                         e integrato per ottimizzare il flusso di lavoro esistente.</p>
                                     <span><a class="text_decoration_none btn" href="#"> Inizia la tua prova gratuita </a></span>
                                     <div class="margin_15_0">Annulla in qualsiasi momento</div>
-                                    <i class="fas fa-arrow-down"></i>
+                                    <a href="#"><i class="fas fa-arrow-down"></i></a>
                                 </div>
                                 <div class="contenuto_dx float_right position_absolute">
                                     <img class="width_img float_right" src="img/jumbo.png" alt="Img jumbo">
