--- a/bonus/index.html
+++ b/bonus/index.html
@@ -497,7 +497,7 @@
                                                 <i class="fas fa-pencil-alt float_left"></i> 
                                                 <span class="float_right">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                             </div>
-                                            <div class="margin_30_0_0_0 text_align_center btn">Prova gratis per 30 giorni</div>
+                                            <div class="margin_30_0_0_0 text_align_center btn"><a class="color_white text_decoration_none" href="#">Prova gratis per 30 giorni</a></div>
                                             <div class="margin_30_0 padding_0_0_30_0 border_bottom display_inline_block">oppure</div> 
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
@@ -529,7 +529,7 @@
                                                 <i class="far fa-smile"></i>
                                                 <span class="float_right">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                             </div>
-                                            <div class="margin_30_0_0_0 text_align_center btn">Prova gratis per 30 giorni</div>
+                                            <div class="margin_30_0_0_0 text_align_center btn"><a class="color_white text_decoration_none" href="#">Prova gratis per 30 giorni</a></div>
                                             <div class="margin_30_0 padding_0_0_30_0 border_bottom display_inline_block">oppure</div> 
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
@@ -562,7 +562,7 @@
                                                 <i class="fas fa-pencil-alt float_left"></i> 
                                                 <span class="float_right">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                             </div>
-                                            <div class="margin_30_0_0_0 text_align_center btn">Prova gratis per 30 giorni</div>
+                                            <div class="margin_30_0_0_0 text_align_center btn"><a class="color_white text_decoration_none" href="#">Prova gratis per 30 giorni</a></div>
                                             <div class="margin_30_0 padding_0_0_30_0 border_bottom display_inline_block">oppure</div> 
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
@@ -586,7 +586,7 @@
                                             <div class="font_weight_bold margin_10_0">Contatta l'ufficio vendite per i prezzi</div>
                                             <div class="margin_20_0">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</div>
                                         </div>
-                                        <div class="float_right display_inline_block btn">Contatta l'ufficio vendite</div>
+                                        <div class="float_right display_inline_block btn"><a class="color_white text_decoration_none" href="#">Contatta l'ufficio vendite</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -600,7 +600,7 @@
                             <div class="contenuto_dx float_right padding_30">
                                 <h3>Entra in contatto con un partner Dropbox</h3>
                                 <p class="margin_20_0">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione esupporto continui.</p>
-                                <span class="btn btn_white">Trova un partner</span>
+                                <span class="btn btn_white"><a class="color_black text_decoration_none" href="#">Trova un partner</a></span>
                             </div>    
                         </div>
                     </section>
@@ -695,7 +695,7 @@
                     <section class="banner_prova_gratuita">
                         <div class="contenitore background_color_b0cfe5">
                             <div class="contenuto float_left font_size_30 width_60perc color_650f2f padding_80 font_weight_bold text_align_center">Porta Dropbox Business nella tua azienda.</div>
-                            <span class="btn float_left btn_white_widthout_border margin_80">Inizia la tua prova gratuita</span>
+                            <span class="btn float_left btn_white_widthout_border margin_80"><a class="color_black text_decoration_none" href="#">Inizia la tua prova gratuita</a></span>
                         </div>
                     </section>
 
