--- a/bonus/index.html
+++ b/bonus/index.html
@@ -398,20 +398,20 @@
                                             <img class="vertical_align_middle" src="../img/logo-small.png" alt="Logo Dropbox">
                                         </a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu display_inline_block margin_0_20 line_height_70">
                                         <a class="text_decoration_none color_black" href="#">Perchè Dropbox?</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu display_inline_block margin_0_20 line_height_70">
                                         <a class="text_decoration_none color_black" href="#">Funzioni</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu display_inline_block margin_0_20 line_height_70">
                                         <a class="text_decoration_none color_black" href="#">Piani e prezzi</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="contenitore_dx float_right">
                                 <ul>
-                                    <li class="supporto display_inline_block margin_0_20">
+                                    <li class="supporto bordo_menu display_inline_block margin_0_20 line_height_70 position_relative">
                                         <a class="text_decoration_none color_black" href="#">Supporto</a>
                                         <div class="hover_in">
                                             <ul>
@@ -420,13 +420,13 @@
                                             </ul>
                                         </div>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu display_inline_block margin_0_20 line_height_70">
                                         <a class="text_decoration_none color_black" href="#">Contatta l'ufficio vendite</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu display_inline_block margin_0_20 line_height_70">
                                         <a class="text_decoration_none color_black" href="#">Accedi</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="display_inline_block margin_0_20 line_height_70">
                                         <a class="text_decoration_none color_black btn" href="#">Inizia</a>
                                     </li>
                                 </ul>
