--- a/index.html
+++ b/index.html
@@ -398,26 +398,26 @@
                                             <img class="vertical_align_middle" src="img/logo-small.png" alt="Logo Dropbox">
                                         </a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu line_height_70 display_inline_block margin_0_20">
                                         <a class="text_decoration_none color_black" href="#">Perchè Dropbox?</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu line_height_70 display_inline_block margin_0_20">
                                         <a class="text_decoration_none color_black" href="#">Funzioni</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu line_height_70 display_inline_block margin_0_20">
                                         <a class="text_decoration_none color_black" href="#">Piani e prezzi</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="contenitore_dx float_right">
                                 <ul>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu line_height_70 display_inline_block margin_0_20">
                                         <a class="text_decoration_none color_black" href="#">Supporto</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu line_height_70 display_inline_block margin_0_20">
                                         <a class="text_decoration_none color_black" href="#">Contatta l'ufficio vendite</a>
                                     </li>
-                                    <li class="display_inline_block margin_0_20">
+                                    <li class="bordo_menu line_height_70 display_inline_block margin_0_20">
                                         <a class="text_decoration_none color_black" href="#">Accedi</a>
                                     </li>
                                     <li class="display_inline_block margin_0_20">
