fix icone e testo nelle colonne

--- a/index.html
+++ b/index.html
@@ -476,96 +476,147 @@
                                             <span>Singolo</span> 
                                         </div>
                                         <div class="contenitore_interno padding_30">
-                                            <div class="font_weight_bold">Professional</div>
+                                            <div class="font_weight_bold font_size_2rem">Professional</div>
                                             <div class="font_weight_bold margin_10_0">19,99 &euro;</div>
                                             <div class="margin_10_0 color_grey">/mese</div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="far fa-user"></i>
-                                                <span>1 utente</span> 
+                                                <i class="far fa-user float_left"></i>
+                                                <span class="float_right padding_0_5">1 utente</span> 
                                             </div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="far fa-folder"></i>
-                                                <span>3 TB di spazio di archiviazione sicuro</span>
+                                                <i class="far fa-folder float_left"></i>
+                                                <span class="float_right padding_0_5">3 TB di spazio di archiviazione sicuro</span>
                                             </div>
                                             <div class="contenuto margin_30_0">
                                                 <i class="fas fa-pencil-alt float_left"></i> 
-                                                <span class="float_right">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
+                                                <span class="float_right padding_0_5">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                             </div>
                                             <div class="margin_30_0_0_0 text_align_center btn"><a class="color_white text_decoration_none" href="#">Prova gratis per 30 giorni</a></div>
                                             <div class="margin_30_0 padding_0_0_30_0 border_bottom display_inline_block">oppure</div> 
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Invia file fino a 100GB con Dropbox Transfert</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Cartella offline su dispositivi mobili</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Pulizia remota dell'account</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Filigrana documento</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Assistenza prioritaria via email e chat</div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Pulizia remota dell'account</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Filigrana documento</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0">  
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="cln display_inline_block float_left margin_0_30">
                                         <div class="padding_10 border_bottom text_align_center">
-                                            <i class="far fa-user"></i>
+                                            <i class="far fa-building"></i>
                                             <span>Team</span> 
                                         </div>
                                         <div class="contenitore_interno padding_30">
-                                            <div class="font_weight_bold">Standard</div>
+                                            <div class="font_weight_bold font_size_2rem">Standard</div>
                                             <div class="font_weight_bold margin_10_0">19,99 &euro;</div>
                                             <div class="margin_10_0 color_grey">/ utente / mese, a partire da 3 utenti</div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="fas fa-user-plus"></i>
-                                                <span>1 utente</span> 
+                                                <i class="fas fa-user-plus float_left"></i>
+                                                <span class="float_right padding_0_5">1 utente</span> 
                                             </div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="far fa-folder"></i>
-                                                <span>3 TB di spazio di archiviazione sicuro</span>
+                                                <i class="far fa-folder float_left"></i>
+                                                <span class="float_right padding_0_5">3 TB di spazio di archiviazione sicuro</span>
                                             </div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="far fa-smile"></i>
-                                                <span class="float_right">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
+                                                <i class="far fa-smile float_left"></i>
+                                                <span class="float_right padding_0_5">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                             </div>
                                             <div class="margin_30_0_0_0 text_align_center btn"><a class="color_white text_decoration_none" href="#">Prova gratis per 30 giorni</a></div>
                                             <div class="margin_30_0 padding_0_0_30_0 border_bottom display_inline_block">oppure</div> 
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Invia file fino a 100GB con Dropbox Transfert</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Cartella offline su dispositivi mobili</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Pulizia remota dell'account</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Filigrana documento</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Assistenza prioritaria via email e chat</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Assistenza prioritaria via email e chat</div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Pulizia remota dell'account</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Filigrana documento</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0">  
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0">  
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="cln display_inline_block float_left">
                                         <div class="padding_10 border_bottom text_align_center">
-                                            <i class="far fa-user"></i>
+                                            <i class="far fa-building"></i>
                                             <span>Team</span> 
                                         </div>
                                         <div class="contenitore_interno padding_30">
-                                            <div class="font_weight_bold">Advanced</div>
+                                            <div class="font_weight_bold font_size_2rem">Advanced</div>
                                             <div class="font_weight_bold margin_10_0">19,99 &euro;</div>
                                             <div class="margin_10_0 color_grey">/ utente / mese, a partire da 3 utenti</div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="fas fa-user-plus"></i>
-                                                <span>1 utente</span> 
+                                                <i class="fas fa-user-plus float_left"></i>
+                                                <span class="float_right padding_0_5">1 utente</span> 
                                             </div>
                                             <div class="contenuto margin_30_0">
-                                                <i class="far fa-smile"></i>
-                                                <span>3 TB di spazio di archiviazione sicuro</span>
+                                                <i class="far fa-smile float_left"></i>
+                                                <span class="float_right padding_0_5">3 TB di spazio di archiviazione sicuro</span>
                                             </div>
                                             <div class="contenuto margin_30_0">
                                                 <i class="fas fa-pencil-alt float_left"></i> 
-                                                <span class="float_right">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
+                                                <span class="float_right padding_0_5">Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                             </div>
                                             <div class="margin_30_0_0_0 text_align_center btn"><a class="color_white text_decoration_none" href="#">Prova gratis per 30 giorni</a></div>
                                             <div class="margin_30_0 padding_0_0_30_0 border_bottom display_inline_block">oppure</div> 
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Invia file fino a 100GB con Dropbox Transfert</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Cartella offline su dispositivi mobili</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Pulizia remota dell'account</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Filigrana documento</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Assistenza prioritaria via email e chat</div>
-                                            <div class="margin_30_0"> <span> <i class="fas fa-check check color_1e75fa"></i> </span> Assistenza prioritaria via email e chat</div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Pulizia remota dell'account</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Filigrana documento</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0">  
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
+                                            </div>
+                                            <div class="punto_saliente margin_30_0"> 
+                                                <i class="fas fa-check check color_1e75fa float_left"></i> 
+                                                <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
