piccole modifiche sulla parte estetica

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -466,14 +466,14 @@
 
                 <main class="margin_100_0">
 
-                    
+
                     <section class="presentazione">
                         <section class="piano_dropbox" id="pianp_dropbox_business">
                             <h2>Trova il piano Dropbox Business che fa per te</h2>
                             <div class="fatturazione margin_30_0">
                                 <div class="radio">
-                                    <div class="pallino selezionato"></div><span>Fatturazione mensile</span>
-                                    <div class="pallino"></div><span>Fatturazione annuale</span>
+                                    <div class="pallino selezionato vertical_align_middle"></div><span class="vertical_align_middle">Fatturazione mensile</span>
+                                    <div class="pallino vertical_align_middle"></div><span class="vertical_align_middle">Fatturazione annuale</span>
                                 </div>
                                 <div class="row margin_50_0">
                                     <div class="cln display_inline_block float_left">
