piccole modifiche sulla perte estetica

--- a/index.html
+++ b/index.html
@@ -781,53 +781,53 @@
                         <div class="cln float_left padding_20 margin_50_0_0_0">
                             <div class="macroarea font_weight_bold color_white">Dropbox</div>
                             <ul class="margin_20_0_0_0">
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Applicazione desktop</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Perchè Dropbox</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Piani</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Sicurezza</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Funzioni</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Applicazione desktop</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Perchè Dropbox</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Piani</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Sicurezza</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Funzioni</a></li>
 
                             </ul>
                         </div>
                         <div class="cln float_left padding_20 margin_50_0_0_0">
                             <div class="macroarea font_weight_bold color_white">Prodotti</div>
                             <ul class="margin_20_0_0_0">
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Applicazione desktop</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Perchè Dropbox</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Piani</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Sicurezza</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Funzioni</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Applicazione desktop</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Perchè Dropbox</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Piani</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Sicurezza</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Funzioni</a></li>
 
                             </ul>
                         </div>
                         <div class="cln float_left padding_20 margin_50_0_0_0">
                             <div class="macroarea font_weight_bold color_white">Azienda</div>
                             <ul class="margin_20_0_0_0">
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Applicazione desktop</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Perchè Dropbox</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Piani</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Sicurezza</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Funzioni</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Applicazione desktop</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Perchè Dropbox</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Piani</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Sicurezza</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Funzioni</a></li>
 
                             </ul>
                         </div>
                         <div class="cln float_left padding_20 margin_50_0_0_0">
                             <div class="macroarea font_weight_bold color_white">Supporto</div>
                             <ul class="margin_20_0_0_0">
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Applicazione desktop</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Perchè Dropbox</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Piani</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Sicurezza</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Funzioni</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Applicazione desktop</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Perchè Dropbox</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Piani</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Sicurezza</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Funzioni</a></li>
 
                             </ul>
                         </div>
                         <div class="cln float_left padding_20 margin_50_0_0_0 padding_bottom_150">
                             <div class="macroarea font_weight_bold color_white">Community</div>
                             <ul class="margin_20_0_0_0">
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Applicazione desktop</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Perchè Dropbox</a></li>
-                                <li class="margin_10_0"><a class="text_decoration_none color_white underline" href="#">Piani</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Applicazione desktop</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Perchè Dropbox</a></li>
+                                <li class="margin_10_0"><a class="text_decoration_none color_white" href="#">Piani</a></li>
                             </ul>
                         </div>
                     </div>
