--- a/bonus/index.html
+++ b/bonus/index.html
@@ -502,23 +502,23 @@
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Pulizia remota dell'account</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Filigrana documento</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0">  
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
                                             </div>
                                         </div>
@@ -549,27 +549,27 @@
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Pulizia remota dell'account</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Filigrana documento</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0">  
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0">  
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
                                             </div>
                                         </div>
@@ -600,27 +600,27 @@
                                             <div class="margin_30_0 display_inline_block"> <a class="color_1e75fa" href="#">acquista ora</a> </div>
                                             <div class="font_weight_bold">Punti salienti del piano</div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Invia file fino a 100GB con Dropbox Transfert</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Cartella offline su dispositivi mobili</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Pulizia remota dell'account</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0"> 
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Filigrana documento</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0">  
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
                                             </div>
                                             <div class="punto_saliente check margin_30_0">  
-                                                <i class="fas fa-check color_1e75fa float_left"></i> 
+                                                <i class="fas fa-check color_1e75fa float_left font-size_20"></i> 
                                                 <span class="float_left padding_0_5">Assistenza prioritaria via email e chat</span>
                                             </div>
                                         </div>
